--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cricket-ranking-api",
   "version": "1.0.0",
   "description": "This is an API for top batsmen in cricket",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   }
